2003-08-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/GraphViz.py: toggle sensitivity on year button if based
	of date button selection, add new tab for page options to reduce 
	dialog size.

2003-08-01  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/plugins/GraphViz.py: Added option to limit dates to just years,
	fixed bug to prevent family nodes from being listed more than once

2003-08-01  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFtree.py: add filter and data restriction support
	* src/plugins/writeftree.glade: interface description for Web Family
	Tree export filter

2003-07-31  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/RelLib.py (LdsOrd.are_equal): Correctly handle the case when 
	the new object is None and the old is empty;  
	(LdsOrd.isEmpty): Add function. 

2003-07-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: handle status bar message with autosave
	* src/FamilyView.py: add right-context menus in the family view
	* src/Plugins.py: fixed call in _textdoc.append (typo)
	* src/plugins/Makefile.am: Add WriteFtree.py

2003-07-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: Used EditPerson dialog instead of quick add,
	select added parent in list
	* src/gramps_main.py: eliminated importing of string, display 
	error if no person selected when trying to export
	* src/ListModel.py : explicitly delete renderers and columns due
	to memory leak in pygtk 1.99.16
	* src/PlaceView.py: explictly delete model due to above memory leak
	* src/plugins/pkgexport.glade: don't set height of window
	* src/plugins/WriteFtree.py: export to Web Family Tree

2003-07-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: handle autosave more gracefully

2003-07-28  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/AncestorChart.py: Printable hook.
	* src/plugins/GraphViz.py: Adapt.